horizontal scroll fix

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,9 +19,9 @@ body {
                 position: absolute;
                 left: -40px;
                 top: -40px;
-                width: calc(100% + 80px);
-                height: 30vh;
-                background-image: linear-gradient(rgba($black,0.7), transparent);
+                height: 25vh;
+                width: calc(100% + 40px);
+                background-image: linear-gradient(rgba($black,0.5), transparent);
             }
             @media only screen and (min-width: 768px) {
                 padding: 40px;
